--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     "symfony/http-client": "*"
   },
   "require-dev": {
-    "dealerdirect/phpcodesniffer-composer-installer": "^0.6.0",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
     "nyholm/psr7": "^1.3",
     "php-http/mock-client": "^1.3",
     "php-http/httplug": "^2.1",
@@ -46,9 +46,9 @@
     "phpunit/phpunit": "^8.5",
     "slevomat/coding-standard": "^6.3",
     "squizlabs/php_codesniffer": "^3.5",
-    "symfony/cache": "5.1.0",
-    "symfony/http-client": "5.1.0",
-    "symfony/var-dumper": "^5.1.0"
+    "symfony/cache": "^5.1",
+    "symfony/http-client": "^5.1",
+    "symfony/var-dumper": "^5.1"
   },
   "autoload": {
     "psr-4": {
