--- a/.gitattributes
+++ b/.gitattributes
@@ -3,14 +3,14 @@
 
 # Ignore all test and documentation with "export-ignore".
 /.editorconfig               export-ignore
+/.github                     export-ignore
 /.gitattributes              export-ignore
 /.gitignore                  export-ignore
-/.scrutinizer.yml            export-ignore
-/.styleci.yml                export-ignore
-/.travis.yml                 export-ignore
-/PULL_REQUEST_TEMPLATE.md    export-ignore
-/ISSUE_TEMPLATE.md           export-ignore
+/CHANGELOG.md                export-ignore
+/CONTRIBUTING.md             export-ignore
+/LICENSE                     export-ignore
 /phpcs.xml.dist              export-ignore
 /phpunit.xml.dist            export-ignore
+/phpstan.neon                export-ignore
 /tests                       export-ignore
 /docs                        export-ignore
