--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,18 @@
       "email": "filip.kloucek@gmail.com",
       "homepage": "https://github.com/fidovo",
       "role": "Developer"
+    },
+    {
+      "name": "Pavel Stejskal",
+      "email": "pavel.stejskal@gmail.com",
+      "homepage": "https://github.com/spajxo",
+      "role": "Developer"
     }
   ],
   "require": {
-    "php": "~7.2",
+    "php": "^7.3 || ^8.0",
     "ext-json": "*",
-    "php-http/discovery": "^1.7",
+    "php-http/discovery": "^1.13",
     "php-http/multipart-stream-builder": "^1.1",
     "psr/http-client": "^1.0",
     "psr/http-message": "^1.0.1",
@@ -43,8 +49,8 @@
     "php-http/mock-client": "^1.3",
     "php-http/httplug": "^2.1",
     "phpstan/phpstan": "^0.12.25",
-    "phpunit/phpunit": "^8.5",
-    "slevomat/coding-standard": "^6.3 || ^7.0",
+    "phpunit/phpunit": "^9.5",
+    "slevomat/coding-standard": "^7.0",
     "squizlabs/php_codesniffer": "^3.5",
     "symfony/cache": "^5.1",
     "symfony/http-client": "^5.1",
