[DEP] Remove PHP 7.2 from CI, disable reporting ummatched ignored errors

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,8 @@
 parameters:
-        level: max
-        paths:
+    level: max
+    paths:
         - src
         - tests
+
+    # some ignored errors are unmatched in PHP 8
+    reportUnmatchedIgnoredErrors: false
