--- a/composer.json
+++ b/composer.json
@@ -46,9 +46,11 @@
   "require-dev": {
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
     "nyholm/psr7": "^1.3",
-    "php-http/mock-client": "^1.3",
     "php-http/httplug": "^2.1",
+    "php-http/mock-client": "^1.3",
+    "phpstan/extension-installer": "^1.1",
     "phpstan/phpstan": "^0.12.84",
+    "phpstan/phpstan-phpunit": "^0.12.18",
     "phpunit/phpunit": "^9.5",
     "slevomat/coding-standard": "^7.0",
     "squizlabs/php_codesniffer": "^3.5",
