--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "digitalcz/digisign",
   "type": "library",
-  "description": "Provides communication with https://www.digisign.org/api in PHP via PSR-18 http client",
+  "description": "DigiSign PHP library - provides communication with https://api.digisign.org in PHP via PSR-18 HTTP Client",
   "keywords": [
     "digisign",
     "digi-sign",
@@ -9,7 +9,7 @@
     "digisign.cz",
     "php"
   ],
-  "homepage": "https://github.com/digitalcz/digisign",
+  "homepage": "https://www.digisign.cz",
   "license": "MIT",
   "authors": [
     {
@@ -41,6 +41,7 @@
     "psr/simple-cache": "^1.0"
   },
   "suggest": {
+    "symfony/cache": "*",
     "symfony/http-client": "*"
   },
   "require-dev": {
