--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
     "phpstan/extension-installer": "^1.1",
     "phpstan/phpstan": "^0.12.84",
     "phpstan/phpstan-phpunit": "^0.12.18",
+    "phpstan/phpstan-strict-rules": "^0.12.9",
     "phpunit/phpunit": "^9.5",
     "slevomat/coding-standard": "^7.0",
     "squizlabs/php_codesniffer": "^3.5",
