--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,8 +1,11 @@
 parameters:
     level: max
     paths:
+        - examples
         - src
         - tests
 
     bootstrapFiles:
         - tests/bootstrap.php
+
+    treatPhpDocTypesAsCertain: false
