--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
   },
   "require-dev": {
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
+    "nyholm/nsa": "^1.2.1",
     "nyholm/psr7": "^1.3",
     "php-http/httplug": "^2.1",
     "php-http/mock-client": "^1.3",
