--- a/.gitattributes
+++ b/.gitattributes
@@ -7,10 +7,12 @@
 /.gitattributes              export-ignore
 /.gitignore                  export-ignore
 /CHANGELOG.md                export-ignore
+/UPGRADING-1.0.md            export-ignore
 /CONTRIBUTING.md             export-ignore
 /LICENSE                     export-ignore
-/phpcs.xml.dist              export-ignore
-/phpunit.xml.dist            export-ignore
+/phpcs.xml                   export-ignore
+/phpunit.xml                 export-ignore
 /phpstan.neon                export-ignore
 /tests                       export-ignore
+/examples                    export-ignore
 /docs                        export-ignore
