--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,8 @@
 name: CI
 
 on:
-  push:
-    branches: ['master']
-  pull_request:
+  - pull_request
+  - push
 
 jobs:
   ci:
@@ -20,16 +19,16 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v2
 
       - name: Cache dependencies
-        uses: actions/cache@v2.1.5
+        uses: actions/cache@v2
         with:
           path: ~/.composer/cache/files
           key: dependencies-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
 
       - name: Setup PHP
-        uses: shivammathur/setup-php@2.11.0
+        uses: shivammathur/setup-php@2
         with:
           php-version: ${{ matrix.php }}
           extensions: mbstring, zip
