--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     "php-http/multipart-stream-builder": "^1.1",
     "psr/http-client": "^1.0",
     "psr/http-message": "^1.0.1",
-    "psr/simple-cache": "^1.0"
+    "psr/simple-cache": "^1.0 || ^3.0"
   },
   "suggest": {
     "symfony/cache": "*",
@@ -57,9 +57,9 @@
     "phpunit/phpunit": "^8.5 || ^9.0",
     "slevomat/coding-standard": "^7.1",
     "squizlabs/php_codesniffer": "^3.5",
-    "symfony/cache": "^5.1",
-    "symfony/http-client": "^5.1",
-    "symfony/var-dumper": "^5.1"
+    "symfony/cache": "^5.4 || ^6.0",
+    "symfony/http-client": "^5.4 || ^6.0",
+    "symfony/var-dumper": "^5.4 || ^6.0"
   },
   "autoload": {
     "psr-4": {
