--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,8 @@
     "sort-packages": true,
     "allow-plugins": {
       "phpstan/extension-installer": true,
-      "dealerdirect/phpcodesniffer-composer-installer": true
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "php-http/discovery": true
     }
   }
 }
