Fix email in composer.json

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     {
       "name": "Pavel Stejskal",
-      "email": "pavel.stejskal@gmail.com",
+      "email": "spajxo@gmail.com",
       "homepage": "https://github.com/spajxo",
       "role": "Developer"
     }
