--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "php-http/discovery": "^1.13",
     "php-http/multipart-stream-builder": "^1.1",
     "psr/http-client": "^1.0",
-    "psr/http-message": "^1.0.1",
+    "psr/http-message": "^1.0.1 || ^2.0",
     "psr/simple-cache": "^1.0 || ^3.0"
   },
   "suggest": {
@@ -45,7 +45,7 @@
     "symfony/http-client": "*"
   },
   "require-dev": {
-    "digitalcz/coding-standard": "^0.0.1",
+    "digitalcz/coding-standard": "^0.1.0",
     "nyholm/nsa": "^1.2.1",
     "nyholm/psr7": "^1.3",
     "php-http/httplug": "^2.1",
